--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-target/
+**/target/
+**/bin/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -13,5 +14,7 @@ buildNumber.properties
 # Eclipse m2e generated files
 # Eclipse Core
 .project
+**/.polyglot*
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+**/.settings/
